--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
       <a class="navbar-brand js-scroll" href="#page-top">Gautham Vedam</a>
       <div class="navbar" >
         <ul class="navbar-nav">
-          <li><a  style="color: #fff; text-transform: uppercase; font-weight: 600; padding-right: .5rem; padding-left: .5rem;" href="https://www.linkedin.com/in/gautham-vedam/"><span ><i class="ion-social-linkedin"></i></span></a></li>
-          <li><a  style="color: #fff; text-transform: uppercase; font-weight: 600; padding-right: .5rem; padding-left: .5rem;" href="https://github.com/GauthamVedam"><span ><i class="ion-social-github"></i></span></a></li>
-          <li><a  style="color: #fff; text-transform: uppercase; font-weight: 600; padding-right: .5rem; padding-left: .5rem;" href="https://www.instagram.com/gautamvedam/"><span ><i class="ion-social-instagram"></i></span></a></li>
+          <li><a  style="color: #fff; text-transform: uppercase; font-weight: 600; padding-right: .5rem; padding-left: .5rem;" href="https://www.linkedin.com/in/gautham-vedam/"><span ><i class="ion-social-linkedin" style="font-size: 20px;"></i></span></a></li>
+          <li><a  style="color: #fff; text-transform: uppercase; font-weight: 600; padding-right: .5rem; padding-left: .5rem;" href="https://github.com/GauthamVedam"><span ><i class="ion-social-github" style="font-size: 20px;"></i></span></a></li>
+          <li><a  style="color: #fff; text-transform: uppercase; font-weight: 600; padding-right: .5rem; padding-left: .5rem;" href="https://www.instagram.com/gautamvedam/"><span ><i class="ion-social-instagram" style="font-size: 20px;"></i></span></a></li>
         </ul>
       </div>
       <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault" aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
